export const APERTURES = [
  'f/1.2',
  'f/1.4',
  'f/2',
  'f/2.8',
  'f/4',
  'f/5.6',
  'f/8',
  'f/11',
  'f/16',
  'f/22',
];

export const SHUTTERS = [
  '1/4000',
  '1/2000',
  '1/1000',
...
