...
  onPress: () => void;
  testID?: string;
}

export function HeaderCloseButton({
  onPress,
  testID = "close-button",
}: HeaderTextButtonProps) {
  return (
    <HeaderButton onPress={onPress} testID={testID}>
      <Text variant="body" className="text-slate-blue">
        Close
      </Text>
...
  testID?: string;
}

export function HeaderSaveButton({
  onPress,
  disabled = false,
  testID = "save-button",
}: HeaderSaveButtonProps) {
  return (
    <HeaderButton onPress={onPress} disabled={disabled} testID={testID}>
      <Text
        variant="body"
        className={`font-medium ${disabled ? "text-stone" : "text-slate-blue"}`}
...
